add select university

--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -4,6 +4,8 @@
 </head>
 <head>
     <link rel="stylesheet" href="/styles/sign_form.css">
+    <link rel="stylesheet" href="/styles/selectbox.css">
+
 </head>
 <body>
 <div class="wrapper">
@@ -19,6 +21,51 @@
                    placeholder="Name"
                    pattern="[a-zA-ZА-Яа-яЁё ]+"
                    required="required">
+        </div>
+        <div>
+            <div class="select-box">
+                <div class="options-container active">
+                    <div class="option">
+                        <input type="radio" class="radio" id="khpi" name="university">
+                        <label for="khpi">KhPI</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="khnure" name="university">
+                        <label for="khnure">KhNURE</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="first" name="university">
+                        <label for="first">first</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="second" name="university">
+                        <label for="second">second</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="third" name="university">
+                        <label for="third">third</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="fourth" name="university">
+                        <label for="fourth">fourth</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="fifth" name="university">
+                        <label for="fifth">fifth</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="seventh" name="university">
+                        <label for="seventh">seventh</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="eightn" name="university">
+                        <label for="eightn">eightn</label>
+                    </div>
+                </div>
+                <div class="selected">
+                    Select university
+                </div>
+            </div>
         </div>
         <div class="line">
             <div>
