--- a/src/main/resources/static/styles/selectbox.css
+++ b/src/main/resources/static/styles/selectbox.css
@@ -1,7 +1,13 @@
+body::-webkit-scrollbar {
+    width: 0px;
+}
+
+
 .select-box {
     display: flex;
-    width: 400px;
+    width: 100%;
     flex-direction: column;
+    position: relative;
 }
 
 .select-box .options-container {
@@ -23,8 +29,35 @@
     order: 0;
 }
 
+.selected::after {
+    content: "";
+    background: url("/img/arrow-down.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    position: absolute;
+    height: 100%;
+    width: 45px;
+    right: 10px;
+    top: 10px;
+
+    transition: all 0.4s;
+}
 
 .select-box .options-container.active {
+    max-height: 240px;
+    opacity: 1;
+    overflow-y: scroll;
+    margin-bottom: 20px;
+}
+
+.select-box .options-container.active + .selected::after {
+    transform: rotateX(180deg);
+    top: -6px;
+}
+
+.select-box .options-container.active {
+    margin-top: 54px;
     max-height: 240px;
     opacity: 1;
     overflow-y: scroll;
@@ -56,4 +89,27 @@
 
 .select-box .option .radio {
     display: none;
+}
+
+.search-box input {
+    width: 100%;
+    padding: 12px 16px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    position: absolute;
+    border-radius: 8px 8px 0 0;
+    z-index: 100;
+    border: 8px solid #f1f1f1;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.5s;
+}
+
+.search-box input:focus {
+    outline: none;
+}
+
+.select-box .options-container.active ~ .search-box input {
+    opacity: 1;
+    pointer-events: auto;
 }
