add multiple selectbox

--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -23,6 +23,36 @@
                    required="required">
         </div>
         <div>
+            City
+            <div class="select-box">
+                <div class="options-container">
+                    <div class="option">
+                        <input type="radio" class="radio" id="Kharkiv" name="cityName">
+                        <label for="Kharkiv">Kharkiv</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="Kiiv" name="cityName">
+                        <label for="Kiiv">Kiiv</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="Lviv" name="cityName">
+                        <label for="Lviv">Lviv</label>
+                    </div>
+                    <div class="option">
+                        <input type="radio" class="radio" id="Dnepr" name="cityName">
+                        <label for="Dnepr">Dnepr</label>
+                    </div>
+                </div>
+                <div class="selected">
+                    Select city
+                </div>
+                <div class="search-box">
+                    <input type="text" placeholder="Start typing...">
+                </div>
+            </div>
+        </div>
+        <div>
+            University
             <div class="select-box">
                 <div class="options-container">
                     <div class="option">
