fix async fetch data

--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -27,13 +27,13 @@
             <div id="citySelectBox" class="select-box">
                 <div id="cityOptionsContainer" class="options-container">
                 </div>
-                <div class="selected">
+                <div id="citySelected" class="selected">
                     Select city
                 </div>
                 <div class="search-box">
                     <input type="text" placeholder="Start typing...">
                 </div>
-                <input type="hidden" name="cityName">
+                <input type="hidden" name="cityName" id="cityName">
             </div>
         </div>
         <div>
@@ -41,7 +41,7 @@
             <div id="universitySelectBox" class="select-box">
                 <div id="universityOptionsContainer" class="options-container">
                 </div>
-                <div class="selected">
+                <div id="universitySelected" class="selected">
                     Select university
                 </div>
                 <div class="search-box">
