city onchange university list

--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -30,6 +30,8 @@
                         <div th:if="${ready}">
                             <div class="t1" style="align-self: center">My info</div>
                             <div th:text="${profile.name}"></div>
+                            <div th:text="${university}"></div>
+                            <div th:text="${city}"></div>
                             <div th:text="${profile.age}"></div>
                             <div th:text="${profile.gender}"></div>
                         </div>
