--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -5,7 +5,6 @@
 <head>
     <link rel="stylesheet" href="/styles/sign_form.css">
     <link rel="stylesheet" href="/styles/selectbox.css">
-
 </head>
 <body>
 <div class="wrapper">
@@ -15,6 +14,7 @@
     <form id="profile_form" th:object="${profile}" action="/profile/edit" method="post" enctype="multipart/form-data"
           onsubmit="return check()">
         <input type="number" th:field="*{id}" hidden>
+        <input type="hidden" th:field="*{university}">
         <div>Name:
             <input type="text" th:field="*{name}"
                    id="name"
@@ -33,7 +33,7 @@
                 <div class="search-box">
                     <input type="text" placeholder="Start typing...">
                 </div>
-                <input type="hidden" name="cityName" id="cityName">
+                <input type="hidden" name="cityName" id="cityName" th:value="${cityName}">
             </div>
         </div>
         <div>
@@ -47,7 +47,7 @@
                 <div class="search-box">
                     <input type="text" placeholder="Start typing...">
                 </div>
-                <input type="hidden" name="universityName">
+                <input type="hidden" name="universityName" id="universityName" th:value="${universityName}">
             </div>
         </div>
         <div>
@@ -65,8 +65,8 @@
             <input type="file" name="imageFile">
         </label>
         <input type="hidden" th:field="*{image}">
+        <button onclick="submitForms()" type="submit">Apply</button>
     </form>
-    <button onclick="submitForms()" type="submit">Apply</button>
 </div>
 <script type="application/javascript" src="/js/load_cities.js"></script>
 <script type="application/javascript" src="/js/selectbox.js"></script>
