add content to the home page

--- a/src/main/resources/templates/events/events.html
+++ b/src/main/resources/templates/events/events.html
@@ -10,61 +10,59 @@
 <body>
 <div th:insert="fragments::topnav">
 </div>
-<div id="main" class="main">
+<div class="header">
+    <div>
+        <h1>Events list</h1>
+    </div>
+    <div>
+        <div class="search-container">
+            <form action="/events/search">
+                <input name="word" type="text" placeholder="Search.." autofocus="autofocus">
+                <button type="submit">
+                    <i class="fa fa-search"></i>
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="menu">
+    <div sec:authorize="hasRole('ROLE_ADMIN')"><a href="/events/create">Create new event</a></div>
+</div>
 
-    <div class="header">
-        <div>
-            <h1>Events list</h1>
-        </div>
-        <div>
-            <div class="search-container">
-                <form action="/events/search">
-                    <input name="word" type="text" placeholder="Search.." autofocus="autofocus">
-                    <button type="submit">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </form>
+<div class="page">
+    <div class="items">
+        <div class="item" th:each="event : ${events}">
+            <div class="top">
+                <div style="align-self: flex-start;">
+                    </span> <span th:text="${event.title}"></span>
+                </div>
+                <div sec:authorize="hasRole('ROLE_ADMIN')" class="row_block">
+                    <div>
+                        <a th:href="@{/events/edit/{id}(id=${event.id})}" title="Edit">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                    <div>
+                        <a th:href="@{/events/delete/{id}(id=${event.id})}"
+                           onclick="return confirm()" title="Delete">
+                            <i class="fa fa-trash-alt"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="menu">
-        <div sec:authorize="hasRole('ROLE_ADMIN')"><a href="/events/create">Create new event</a></div>
-    </div>
-    <div class="content">
-        <div class="items">
-            <div class="item" th:each="event : ${events}">
-                <div class="top">
-                    <div style="align-self: flex-start;">
-                        </span> <span th:text="${event.title}"></span>
-                    </div>
-                    <div sec:authorize="hasRole('ROLE_ADMIN')" class="row_block">
-                        <div>
-                            <a th:href="@{/events/edit/{id}(id=${event.id})}" title="Edit">
-                                <i class="fa fa-edit"></i>
-                            </a>
-                        </div>
-                        <div>
-                            <a th:href="@{/events/delete/{id}(id=${event.id})}"
-                               onclick="return confirm()" title="Delete">
-                                <i class="fa fa-trash-alt"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div style="">
-                    <textarea th:text="${event.description}" readonly="readonly" rows="6"></textarea>
-                </div>
-                <div sec:authorize="hasRole('ROLE_ADMIN')">
-                    <span th:text="${event.subscribedUsers.size()}"></span>
-                    <span> subscribed users</span>
-                </div>
-                <div sec:authorize="hasRole('ROLE_USER')">
-                    <div sec:authentication=""></div>
-                    <form th:action="@{/events/subscribe/{id}(id=${event.id})}" method="post">
-                        <button type="submit">Subscribe <i class="fa fa-check"></i></button>
-                    </form>
-                    <div></div>
-                </div>
+            <div style="">
+                <textarea th:text="${event.description}" readonly="readonly" rows="6"></textarea>
+            </div>
+            <div sec:authorize="hasRole('ROLE_ADMIN')">
+                <span th:text="${event.subscribedUsers.size()}"></span>
+                <span> subscribed users</span>
+            </div>
+            <div sec:authorize="hasRole('ROLE_USER')">
+                <div sec:authentication=""></div>
+                <form th:action="@{/events/subscribe/{id}(id=${event.id})}" method="post">
+                    <button type="submit">Subscribe <i class="fa fa-check"></i></button>
+                </form>
+                <div></div>
             </div>
         </div>
     </div>
