--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,8 +9,14 @@
 <div th:insert="fragments::topnav">
 </div>
 <div class="main">
-    <div>
+    <div class="page">
         <h1 th:text="${message}"></h1>
+        <h2>This is your home page</h2>
+        <h3>Here you can get information about new events of our department</h3>
+        <div>Some long and boring description here</div>
+        <div>
+            <img src="/img/student.jpg">
+        </div>
     </div>
 </div>
 </body>
