--- a/src/main/resources/static/styles/content.css
+++ b/src/main/resources/static/styles/content.css
@@ -51,6 +51,9 @@
     padding-left: 10px;
     align-items: center;
     background: #f1f1f1;
+    margin: auto;
+    margin-top: 50px;
+    width: 1000px;
 }
 
 .menu {
