--- a/src/main/resources/static/styles/layout.css
+++ b/src/main/resources/static/styles/layout.css
@@ -4,6 +4,10 @@ body {
     background-color: #f1f1f1;
 }
 
+body::-webkit-scrollbar {
+    width: 0px;
+}
+
 .main {
     display: flex;
     flex-direction: column;
@@ -113,4 +117,18 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+
+.page {
+    margin: auto;
+    margin-top: 30px;
+    padding: 20px;
+    padding-top: 30px;
+    background: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 1000px;
+    min-height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
