--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -10,6 +10,7 @@ input {
 }
 
 .img_wrap img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 100%;
     display: block;
@@ -34,7 +35,6 @@ input {
     margin-right: 20px;
     padding: 10px;
     width: 100%;
-    border: 1px solid black;
 }
 
 .t1 {
@@ -47,10 +47,9 @@ input {
     color: white;
     padding: 14px 20px;
     text-decoration: none;
-
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: 400px;
 }
 
 .b1:hover {
