--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -8,7 +8,10 @@
 <body>
 <form th:action="@{/events/change}" th:object="${event}" method="post">
     <h1>Edit event</h1>
-    <input type="text" class="hide" th:field="*{id}">
+    <input type="hidden" th:field="*{id}">
+    <input type="hidden" name="cr_date" th:value="${createdDate}">
+    <input type="hidden" name="l_mod_date" th:value="${lastModifiedDate}">
+
 
     <p>
         <input type="text" th:field="*{title}"
