--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="/styles/content_form.css">
 </head>
 <body>
-<div>
-    <form th:action="@{/events/add}" th:name="event" method="post">
+<div class="wrapper">
+    <form th:action="@{/events/add}" th:name="event" method="post" style="width: 100%">
         <h1>Create new event</h1>
         <p>
             <input type="text" th:name="title" placeholder="Title"
