--- a/src/main/resources/static/styles/layout.css
+++ b/src/main/resources/static/styles/layout.css
@@ -2,6 +2,13 @@
 
 body {
     background-color: #f1f1f1;
+    font-size: 20px;
+    font-family: "Roboto", sans-serif;
+}
+
+textarea {
+    font-size: 20px;
+    font-family: "Roboto", sans-serif;
 }
 
 body::-webkit-scrollbar {
@@ -58,6 +65,7 @@ body::-webkit-scrollbar {
 /* Dropdown menu*/
 .dropbtn {
     background-color: cadetblue;
+    width: 200px;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -78,7 +86,7 @@ body::-webkit-scrollbar {
     display: none;
     position: absolute;
     background-color: cadetblue;
-    min-width: 160px;
+    width: 100%;
     z-index: 1;
     transition: 0.5s;
 }
@@ -89,12 +97,14 @@ body::-webkit-scrollbar {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: center;
 }
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
     background-color: darkcyan;
 }
+
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -133,4 +143,44 @@ body::-webkit-scrollbar {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    align-items: center;
+    position: sticky;
+    top: 50px;
+    width: 100%;
+    background: white;
+    box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.2);
+}
+
+textarea.text {
+    border: 1px solid #cccccc;
+    margin: 10px;
+    padding: 8px;
+    width: 90%;
+    height: 200px;
+    resize: none;
+    outline: none;
+}
+
+.btn1 {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    transition: 0.5s;
+}
+
+.btn1:hover {
+    background-color: #429144;
 }
