--- a/src/main/resources/templates/events/events.html
+++ b/src/main/resources/templates/events/events.html
@@ -20,7 +20,6 @@
                 <div sec:authorize="hasRole('ROLE_ADMIN')"><a href="/events/create">Create new event</a></div>
             </div>
         </div>
-
         <div class="search-container">
             <form action="/events/search">
                 <input name="word" type="text" placeholder="Search.." autofocus="autofocus">
@@ -29,50 +28,33 @@
                 </button>
             </form>
         </div>
-
-
     </div>
-
     <div class="items">
         <div class="item" th:each="event : ${events}">
             <div class="top">
                 <div style="align-self: flex-start;">
                     </span> <span th:text="${event.title}"></span>
                 </div>
-                <div sec:authorize="hasRole('ROLE_ADMIN')" class="row_block">
-                    <div>
-                        <a th:href="@{/events/edit/{id}(id=${event.id})}" title="Edit">
-                            <i class="fa fa-edit"></i>
-                        </a>
-                    </div>
-                    <div>
-                        <a th:href="@{/events/delete/{id}(id=${event.id})}"
-                           onclick="return confirm()" title="Delete">
-                            <i class="fa fa-trash-alt"></i>
-                        </a>
-                    </div>
-                </div>
             </div>
             <div>
-                Created at: <span th:text="${event.createdDate}"></span>
+                Created at:
+                <span th:text="${event.createdDate.toLocalDate()}"></span>,
+                <span th:text="${event.createdDate.toLocalTime()}"></span>
             </div>
             <div>
-                Last modified at: <span th:text="${event.lastModifiedDate}"></span>
+                Last modified at:
+                <span th:text="${event.lastModifiedDate.toLocalDate()}"></span>,
+                <span th:text="${event.lastModifiedDate.toLocalTime()}"></span>
             </div>
-            <div style="">
-                <textarea th:text="${event.description}" readonly="readonly" rows="6"></textarea>
+            <div>
+                <textarea class="text" th:text="${event.description}" readonly="readonly" rows="6"></textarea>
+            </div>
+            <div>
+                <a th:href="@{/events/{id}(id=${event.id})}">Go to event</a>
             </div>
             <div sec:authorize="hasRole('ROLE_ADMIN')">
                 <span th:text="${event.subscribedUsers.size()}"></span>
                 <span> subscribed users</span>
-            </div>
-            <div sec:authorize="hasRole('ROLE_USER')">
-                <div sec:authentication=""></div>
-                <form th:action="@{/events/subscribe/{id}(id=${event.id})}" onsubmit="return confirm('subscribe?')"
-                      method="post">
-                    <button type="submit">Subscribe <i class="fa fa-check"></i></button>
-                </form>
-                <div></div>
             </div>
         </div>
     </div>
