--- a/src/main/resources/static/styles/layout.css
+++ b/src/main/resources/static/styles/layout.css
@@ -85,7 +85,8 @@ body::-webkit-scrollbar {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: cadetblue;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 100%;
     z-index: 1;
     transition: 0.5s;
@@ -93,7 +94,7 @@ body::-webkit-scrollbar {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: white;
+    color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -102,7 +103,7 @@ body::-webkit-scrollbar {
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: darkcyan;
+    background-color: #dddddd;
 }
 
 
@@ -114,6 +115,7 @@ body::-webkit-scrollbar {
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     background-color: darkcyan;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .wrapper {
@@ -184,3 +186,19 @@ textarea.text {
 .btn1:hover {
     background-color: #429144;
 }
+
+.grid-table {
+    display: grid;
+    width: 100%;
+}
+
+table {
+    width: 100%;
+    border: 1px solid black;
+}
+
+table thead {
+    width: 100%;
+    background: #e9e9e9;
+}
+
