--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -13,6 +13,9 @@
             <input type="text" th:name="title" placeholder="Title"
                    autofocus="autofocus" required>
         <p>
+            <input type="datetime-local" th:name="date">
+        </p>
+        <p>
 				<textarea rows="10" cols="20" wrap="hard" th:name="description"
                           placeholder="Description" required></textarea>
         <p>
