--- a/src/main/resources/templates/events/events.html
+++ b/src/main/resources/templates/events/events.html
@@ -47,13 +47,18 @@
                 <span th:text="${event.lastModifiedDate.toLocalTime()}"></span>
             </div>
             <div>
+                Event date:
+                <span th:text="${event.eventDate.toLocalDate()}"></span>,
+                <span th:text="${event.eventDate.toLocalTime()}"></span>
+            </div>
+            <div>
                 <textarea class="text" th:text="${event.description}" readonly="readonly" rows="6"></textarea>
             </div>
             <div>
                 <a th:href="@{/events/{id}(id=${event.id})}">Go to event</a>
             </div>
             <div sec:authorize="hasRole('ROLE_ADMIN')">
-                <span th:text="${event.subscribedUsers.size()}"></span>
+                <span th:text="${event.subscriptions.size()}"></span>
                 <span> subscribed users</span>
             </div>
         </div>
