--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -42,11 +42,22 @@
                 </div>
             </div>
         </div>
-        <div class="column_block">
-            <h1>My events</h1>
-            <div th:each="event:${user.events}">
-                <div th:text="${event.title}"></div>
-            </div>
+        <h1>My events</h1>
+        <div class="column_block" style="width: 100%">
+            <table>
+                <thead>
+                <th>Event</th>
+                <th>Date</th>
+                </thead>
+                <tbody>
+                <tr th:each="event:${user.events}">
+                    <td>
+                        <a th:href="@{/events/{id}(id=${event.id})}" th:text="${event.title}"></a>
+                    </td>
+                    <td th:text="${event.createdDate.toLocalDate()}"></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
