--- a/src/main/resources/templates/events/event.html
+++ b/src/main/resources/templates/events/event.html
@@ -16,6 +16,7 @@
             <div>
                 <a href="/events/all">Back</a>
             </div>
+            <div id="event_id" th:text="${event.id}"></div>
             <h1 th:text="${event.title}"></h1>
             <div th:if="${subscribed}">You are subscribed on this event</div>
         </div>
@@ -72,12 +73,7 @@
                 <th>Subscribed at</th>
                 </thead>
                 <tbody>
-                <tr th:each="user:${subscribers}">
-                    <td th:text="${user.username}"></td>
-                    <td th:text="${user.profile.name}"></td>
-                    <td th:if="${user.profile.university}"
-                        th:text="${user.profile.university.ukrShortName}"></td>
-                </tr>
+
                 </tbody>
             </table>
 
@@ -85,10 +81,7 @@
 
     </div>
 </div>
-<script type="text/javascript">
-    function search() {
-        document.getElementById("search-note").submit()
-    }
+<script type="text/javascript" src="/js/loadSubscriptions.js">
 </script>
 </body>
 
